<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".layoutframe">

    <ImageView
        android:scaleType="center"
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/img_bckround2"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-135dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="15dp"
        android:layout_width="90dp"
        android:layout_height="85dp"
        app:srcCompat="@drawable/img_logo" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:layout_width="400dp"
        android:layout_height="400dp"
        app:srcCompat="@drawable/donat" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|left"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:textSize="15dp"
        android:text="@string/web" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="50dp"
        android:textSize="30dp"
        android:fontFamily="sans-serif-black"
        android:textStyle="italic"
        android:textColor="@color/brown"
        android:text="@string/judul" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="90dp"
        android:textSize="25dp"
        android:textStyle="bold"
        android:text="@string/date" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="130dp"
        android:layout_marginRight="60dp"
        android:textStyle="italic"
        android:text="@string/only" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="130dp"
        android:layout_marginRight="15dp"
        android:textSize="50dp"
        android:text="@string/harga" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="50dp"
        android:textStyle="bold"
        android:textSize="30dp"
        android:text="@string/satuan" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="210dp"
        android:textSize="10dp"
        android:textStyle="bold"
        android:text="@string/tap" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="220dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/brown"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/link" />


</FrameLayout>